--- a/WpfApp1/App.config
+++ b/WpfApp1/App.config
@@ -5,8 +5,8 @@
     </startup>
 
 	<connectionStrings>
-		<add name="dbConn" connectionString="Server=studentpsql.miun.se;Port=5432;
-			 Database=nicklas_databas19;User Id=nicmel;Password=Sommar2019;SslMode=Require;"/>
+		<add name="ik102g_db16" connectionString="Server=studentpsql.miun.se;Port=5432;
+			 Database=ik102g_db16;User Id=ik102g_1916;Password=databas19;SslMode=Require;"/>
 	</connectionStrings>
 
 </configuration>
