--- a/WpfApp1/App.config
+++ b/WpfApp1/App.config
@@ -6,7 +6,7 @@
 
 	<connectionStrings>
 		<add name="ik102g_db16" connectionString="Server=studentpsql.miun.se;Port=5432;
-			 Database=ik102g_db16;User Id=ik102g_1916;Password=databas19;SslMode=Require;"/>
+			 Database=ik102g_db16;User Id=ik102g_1916;Password=databas19;SslMode=Prefer;"/>
 	</connectionStrings>
 
 </configuration>
