--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -78,6 +78,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AdmWin.xaml.cs">
+      <DependentUpon>AdmWin.xaml</DependentUpon>
+    </Compile>
     <Compile Include="hemgangna barn.xaml.cs">
       <DependentUpon>hemgangna barn.xaml</DependentUpon>
     </Compile>
@@ -94,6 +97,10 @@
       <DependentUpon>schema_personalvy.xaml</DependentUpon>
     </Compile>
     <Compile Include="Klasser\Vardnadshavare.cs" />
+    <Page Include="AdmWin.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="hemgangna barn.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
